welcome.lessons.welcome.variables.Variables.scala.code
public void run() { 
}
int nbpas=0;
int dejafait=0;
while (!estSurBiscuit()) {
  avance();
  nbpas = nbpas + 1;
}
